--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation 'org.springframework.data:spring-data-commons:2.7.2'
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
 
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.5'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
