--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 logging.level.org.springframework.jdbc.core = TRACE
 
 spring.datasource.username=root
-spring.datasource.url=jdbc:mysql://localhost:3306/fast_sns?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fast_sns?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&useSSL=false&autoReconnect=true
 spring.datasource.password=shquddn970508!
+
+server.address=0.0.0.0
+server.port=8080
