--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,6 @@
+logging.level.org.springframework.jdbc.core = TRACE
+
 spring.datasource.username=root
-#spring.datasource.url=jdbc:mysql://${url}?rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.url=jdbc:mysql://${url}?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.password=${password}
-#logging.level.org.springframework.jdbc.core = TRACE
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fast_sns?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=99999
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/fast_sns?rewriteBatchedStatements=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul&useSSL=false&autoReconnect=true
+spring.datasource.password=shquddn970508!
